--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"react-dom": "^18.2.0",
 		"recharts": "^2.2.0",
 		"swr": "^2.0.0",
-		"tailwindcss": "^3.2.4"
+		"tailwindcss": "^3.2.4",
+		"wido": "^0.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.13",
