wip: work on quote

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
+		"@gnosis.pm/gp-v2-contracts": "^1.1.2",
 		"@next/bundle-analyzer": "^13.0.6",
 		"@next/font": "^13.0.6",
 		"@yearn-finance/web-lib": "^0.17.52",
