--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"next": "^13.0.7",
 		"next-pwa": "^5.6.0",
 		"next-seo": "^5.15.0",
+		"next-transpile-modules": "^10.0.0",
 		"nprogress": "^0.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
