--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bump": "bump"
   },
   "dependencies": {
+    "@cowprotocol/cow-sdk": "^2.0.0-alpha.4",
     "@gnosis.pm/gp-v2-contracts": "^1.1.2",
     "@next/bundle-analyzer": "^13.2.3",
     "@next/font": "^13.2.3",
@@ -19,7 +20,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "ethcall": "^4.8.13",
-    "ethers": "^6.0.8",
+    "ethers": "~6.0.8",
     "framer-motion": "^10.0.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
