--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,7 +66,5 @@
     "next.config.js",
     "theme.config.js",
     ".eslintrc.js",
-    "apps/common/contexts/eeeetypes.d.tsxs",
-    ".next/types/**/*.ts"
-, "apps/common/components/Header.tsxs", "apps/common/components/Header.tsxs", "apps/common/components/Header.tsxs"  ]
+    ".next/types/**/*.ts"]
 }
