--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bump": "bump"
   },
   "dependencies": {
-    "@cowprotocol/contracts": "karelianpie/cowprotocol-contracts#ethers-as-dependency",
+    "@cowprotocol/contracts": "https://github.com/karelianpie/cowprotocol-contracts.git#ethers-as-dependency-with-build",
     "@cowprotocol/cow-sdk": "^2.0.0-alpha.4",
+    "@headlessui/react": "^1.7.13",
     "@next/bundle-analyzer": "^13.2.3",
     "@next/font": "^13.2.3",
     "@react-hookz/deep-equal": "^1.0.4",
+    "@react-hookz/web": "^22.0.0",
     "@yearn-finance/web-lib": "^0.18.4",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
