--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bump": "bump"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@next/bundle-analyzer": "^13.2.3",
     "@next/font": "^13.2.3",
     "@react-hookz/deep-equal": "^1.0.4",
+    "@react-hookz/web": "^22.0.0",
     "@yearn-finance/web-lib": "https://github.com/yearn/web-lib.git#ethers6",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
@@ -34,7 +36,26 @@
     "recharts": "^2.4.3",
     "swr": "^2.0.4",
     "tailwindcss": "^3.2.7",
-    "wido": "^0.2.0"
+	"wido": "^0.2.0",
+
+	"@coinbase/wallet-sdk": "^3.6.4",
+    "@ethersproject/experimental": "^5.7.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@walletconnect/ethereum-provider": "^2.4.7",
+    "@walletconnect/jsonrpc-http-connection": "^1.0.6",
+    "@walletconnect/jsonrpc-provider": "^1.0.8",
+    "@web3-react/coinbase-wallet": "8.0.35-beta.0",
+    "@web3-react/core": "8.0.35-beta.0",
+    "@web3-react/eip1193": "8.0.27-beta.0",
+    "@web3-react/gnosis-safe": "8.0.6-beta.0",
+    "@web3-react/metamask": "8.0.30-beta.0",
+    "@web3-react/types": "8.0.20-beta.0",
+    "@web3-react/walletconnect": "8.0.37-beta.0",
+    "eth-provider": "^0.13.6",
+    "eventemitter3": "^5.0.0",
+    "react-hot-toast": "2.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
