--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@next/font": "^13.2.3",
     "@react-hookz/deep-equal": "^1.0.4",
     "@react-hookz/web": "^22.0.0",
-    "@yearn-finance/web-lib": "https://github.com/yearn/web-lib.git#ethers6",
+	"@yearn-finance/web-lib-root": "https://github.com/yearn/web-lib.git#ethers6",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "ethcall": "^4.8.13",
