--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     ],
     "baseUrl": ".",
 	"paths": {
+		"@yearn-finance/web-lib/*": ["node_modules/@yearn-finance/web-lib-root/packages/web-lib/*"],
         "@common/*": ["apps/common/*"],
         "@vaults/*": ["apps/vaults/*"],
         "@veYFI/*": ["apps/veyfi/*"],
