--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
-    "@next/bundle-analyzer": "^13.2.3",
-    "@next/font": "^13.2.3",
+    "@next/bundle-analyzer": "^13.2.4",
+    "@next/font": "^13.2.4",
     "@react-hookz/deep-equal": "^1.0.4",
     "@react-hookz/web": "^22.0.0",
-	"@yearn-finance/web-lib-root": "https://github.com/yearn/web-lib.git#ethers6",
+    "@yearn-finance/web-lib": "^0.19.12",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
-    "ethcall": "^4.8.13",
-    "ethers": "~6.0.8",
-    "framer-motion": "^10.0.2",
+    "ethcall": "^6.0.0",
+    "ethers": "~6.1.0",
+    "framer-motion": "^10.3.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
-    "next": "^13.2.3",
+    "next": "^13.2.4",
     "next-plausible": "^3.7.2",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
@@ -34,41 +34,22 @@
     "react-paginate": "^8.1.4",
     "react-wrap-balancer": "^0.4.0",
     "recharts": "^2.4.3",
-    "swr": "^2.0.4",
+    "swr": "^2.1.0",
     "tailwindcss": "^3.2.7",
-	"wido": "^0.2.0",
-
-	"@coinbase/wallet-sdk": "^3.6.4",
-    "@ethersproject/experimental": "^5.7.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "@walletconnect/ethereum-provider": "^2.4.7",
-    "@walletconnect/jsonrpc-http-connection": "^1.0.6",
-    "@walletconnect/jsonrpc-provider": "^1.0.8",
-    "@web3-react/coinbase-wallet": "8.0.35-beta.0",
-    "@web3-react/core": "8.0.35-beta.0",
-    "@web3-react/eip1193": "8.0.27-beta.0",
-    "@web3-react/gnosis-safe": "8.0.6-beta.0",
-    "@web3-react/metamask": "8.0.30-beta.0",
-    "@web3-react/types": "8.0.20-beta.0",
-    "@web3-react/walletconnect": "8.0.37-beta.0",
-    "eth-provider": "^0.13.6",
-    "eventemitter3": "^5.0.0",
-    "react-hot-toast": "2.4.0"
+    "wido": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.14.6",
+    "@types/node": "^18.15.3",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "autoprefixer": "^10.4.13",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "bump": "^0.2.5",
-    "eslint": "8.35.0",
-    "eslint-config-next": "^13.2.3",
+    "eslint": "8.36.0",
+    "eslint-config-next": "^13.2.4",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-brackets": "^0.1.3",
     "eslint-plugin-import": "^2.27.5",
@@ -81,7 +62,7 @@
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.1",
-    "sass": "^1.58.3",
+    "sass": "^1.59.3",
     "sharp": "^0.31.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5"
