--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@gnosis.pm/gp-v2-contracts": "^1.1.2",
+    "@headlessui/react": "^1.7.14",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "^13.1.1",
+    "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
     "@yearn-finance/web-lib": "^0.18.22",
     "axios": "^1.2.2",
@@ -31,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
+    "react-popper": "^2.3.0",
     "react-wrap-balancer": "^0.2.4",
     "recharts": "^2.2.0",
     "swr": "^2.0.0",
