--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "@next/font": "^13.1.1",
     "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
-    "@yearn-finance/web-lib": "^0.18.26",
+    "@yearn-finance/web-lib": "^0.18.30",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "ethcall": "^4.8.13",
     "ethers": "^5.7.2",
+    "formidable": "^2.1.1",
     "framer-motion": "^8.0.4",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "next": "^13.1.1",
     "next-plausible": "^3.7.2",
     "next-pwa": "^5.6.0",
@@ -38,6 +40,7 @@
     "recharts": "^2.2.0",
     "swr": "^2.0.0",
     "tailwindcss": "^3.2.4",
+    "telegraf": "^4.12.2",
     "wido": "^0.2.0"
   },
   "devDependencies": {
