--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "@gnosis.pm/gp-v2-contracts": "^1.1.2",
+    "@headlessui/react": "^1.7.14",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "^13.1.1",
+    "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
-    "@yearn-finance/web-lib": "^0.18.29",
+    "@yearn-finance/web-lib": "^0.18.30",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "ethcall": "^4.8.13",
     "ethers": "^5.7.2",
+    "formidable": "^2.1.1",
     "framer-motion": "^8.0.4",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "next": "^13.1.1",
     "next-plausible": "^3.7.2",
     "next-pwa": "^5.6.0",
@@ -31,10 +35,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
+    "react-popper": "^2.3.0",
     "react-wrap-balancer": "^0.2.4",
     "recharts": "^2.2.0",
     "swr": "^2.0.0",
     "tailwindcss": "^3.2.4",
+    "telegraf": "^4.12.2",
     "wido": "^0.2.0"
   },
   "devDependencies": {
