--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,5 +66,7 @@
     "next.config.js",
     "theme.config.js",
     ".eslintrc.js",
-    ".next/types/**/*.ts"]
+    ".next/types/**/*.ts",
+    "jest.config.js"
+  ]
 }
