--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.11.18",
     "@types/nprogress": "^0.2.0",
@@ -75,7 +76,8 @@
     "sharp": "^0.31.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zocker": "^1.3.0"
   },
   "resolutions": {
     "bn.js": "5.2.1",
