--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ ALCHEMY_KEY=
 INFURA_KEY=
 PARTNER_ID_ADDRESS=0xFEB4acf3df3cDEA7399794D0869ef76A6EfAff52
 SHOULD_USE_PARTNER_CONTRACT=true
+
+SENTRY_DSN=
