--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "^13.1.1",
     "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
+    "@sentry/nextjs": "^7.52.1",
     "@yearn-finance/web-lib": "^0.18.44",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
