--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 			"@veYFI/*": ["apps/veyfi/*"],
 			"@yBribe/*": ["apps/ybribe/*"],
 			"@yCRV/*": ["apps/ycrv/*"],
+			"@yBal/*": ["apps/ybal/*"],
 		},
 		/* Basic Options */
 		"target": "esnext",
