fix: Internal Server Error when invalid vaults

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yearnfi",
   "version": "0.1.23",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_OPTIONS='--inspect' next",
     "dev:ts": "tsc --watch",
     "start": "tsc && next build && next start",
     "build": "tsc && next build",
