--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "tsc && next build && next export -o ipfs",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "bump": "bump",
-    "test": "jest"
+    "testJest": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test": "vitest"
   },
   "dependencies": {
     "@gnosis.pm/gp-v2-contracts": "^1.1.2",
@@ -19,7 +20,7 @@
     "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.52.1",
-    "@yearn-finance/web-lib": "^0.18.62",
+    "@yearn-finance/web-lib": "^0.18.67",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "ethcall": "^4.8.13",
@@ -47,6 +48,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.11.18",
@@ -55,6 +57,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.0",
     "bump": "^0.2.5",
@@ -68,6 +71,8 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "eth-testing": "^1.14.0",
+    "jest-environment-jsdom": "^29.5.0",
     "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.20",
     "postcss-import": "^15.1.0",
@@ -77,6 +82,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
+    "vitest": "^0.31.1",
     "zocker": "^1.3.0"
   },
   "resolutions": {
