feat: update tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
         run: yarn --prefer-offline
 
       - name: Test project
-        run: yarn node --experimental-vm-modules $(yarn bin jest)
+        run: yarn test
