--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "export": "tsc && next build && next export -o ipfs",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "bump": "bump",
-    "testJest": "yarn node --experimental-vm-modules $(yarn bin jest)",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {
     "@gnosis.pm/gp-v2-contracts": "^1.1.2",
@@ -29,7 +28,6 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "html2canvas": "^1.4.1",
-    "jest": "^29.5.0",
     "next": "^13.1.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
@@ -49,9 +47,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.1",
     "@types/node": "^18.11.18",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
@@ -73,14 +69,12 @@
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eth-testing": "^1.14.0",
-    "jest-environment-jsdom": "^29.5.0",
     "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.20",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^10.2.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
-    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1",
