--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "@headlessui/react": "^1.7.14",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "^13.1.1",
-    "@popperjs/core": "^2.11.7",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.52.1",
-    "@yearn-finance/web-lib": "^0.18.62",
+    "@wagmi/core": "^1.0.8",
+    "@yearn-finance/web-lib": "^0.20.36",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
-    "ethcall": "^4.8.13",
-    "ethers": "^5.7.2",
     "formidable": "^2.1.1",
     "framer-motion": "^8.0.4",
     "graphql": "^16.6.0",
@@ -43,6 +41,8 @@
     "swr": "^2.0.0",
     "tailwindcss": "^3.2.4",
     "telegraf": "^4.12.2",
+    "viem": "^0.3.37",
+    "wagmi": "^1.0.8",
     "wido": "^0.2.0",
     "zod": "^3.21.4"
   },
