--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@headlessui/react": "^1.7.14",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "^13.1.1",
+    "@popperjs/core": "^2.11.8",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.52.1",
     "@wagmi/core": "^1.0.8",
-    "@yearn-finance/web-lib": "^0.20.39",
+    "@yearn-finance/web-lib": "^0.20.40",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "formidable": "^2.1.1",
