--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "swr": "^2.1.5",
     "tailwindcss": "^3.3.2",
     "telegraf": "^4.12.2",
-    "viem": "^0.3.40",
+    "viem": "^0.3.41",
     "wagmi": "^1.0.9",
     "wido": "^0.2.8",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
+	"@testing-library/react": "^14.0.0",
     "@types/node": "^20.2.5",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.7",
@@ -69,7 +69,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eth-testing": "^1.14.0",
     "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
@@ -78,8 +77,7 @@
     "sharp": "^0.32.1",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.4",
-    "vitest": "^0.31.3",
-    "zocker": "^1.3.0"
+    "vitest": "^0.31.3"
   },
   "resolutions": {
     "bn.js": "5.2.1",
