--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.54.0",
     "@wagmi/core": "^1.1.1",
-    "@yearn-finance/web-lib": "^0.20.72",
+    "@yearn-finance/web-lib": "^0.20.73",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
+    "ethers": "5.7.2",
     "formidable": "^2.1.1",
     "framer-motion": "^10.12.16",
     "graphql": "^16.6.0",
