--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "sharp": "^0.32.1",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.0",
+    "webpack": "^5.88.1"
   },
   "resolutions": {
     "bn.js": "5.2.1",
