--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@cowprotocol/cow-sdk": "^2.1.0",
     "@headlessui/react": "^1.7.15",
-    "@next/bundle-analyzer": "^13.4.5",
+    "@next/bundle-analyzer": "^13.4.9",
     "@popperjs/core": "^2.11.8",
     "@react-hookz/deep-equal": "^1.0.4",
-    "@sentry/nextjs": "^7.54.0",
+    "@sentry/nextjs": "^7.58.0",
     "@wagmi/core": "^1.3.3",
-    "@yearn-finance/web-lib": "^0.20.91",
+    "@yearn-finance/web-lib": "^0.20.94",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "ethers": "5.7.2",
@@ -49,35 +49,35 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.3.0",
+    "@types/node": "^20.4.2",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
-    "eslint": "8.42.0",
-    "eslint-config-next": "^13.4.5",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-brackets": "^0.1.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "^3.12.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.2",
     "sass": "^1.63.3",
     "sharp": "^0.32.1",
-    "ts-loader": "^9.4.3",
-    "typescript": "^5.1.3",
-    "vitest": "^0.32.0"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "vitest": "^0.32.0",
+    "webpack": "^5.88.1"
   },
   "resolutions": {
     "bn.js": "5.2.1",
