fix: Update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ ALCHEMY_KEY=
 INFURA_KEY=
 PARTNER_ID_ADDRESS=0xFEB4acf3df3cDEA7399794D0869ef76A6EfAff52
 SHOULD_USE_PARTNER_CONTRACT=true
+WALLETCONNECT_PROJECT_ID=
 
 SENTRY_DSN=
