--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "^2.11.8",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.58.0",
+    "@wagmi/chains": "^1.6.0",
     "@wagmi/core": "^1.3.8",
     "@yearn-finance/web-lib": "^0.20.96",
     "axios": "^1.4.0",
