--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@cowprotocol/cow-sdk": "^2.1.0",
     "@headlessui/react": "^1.7.15",
     "@next/bundle-analyzer": "^13.4.9",
     "@popperjs/core": "^2.11.8",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.58.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "@wagmi/chains": "^1.6.0",
     "@wagmi/core": "^1.3.8",
-    "@yearn-finance/web-lib": "^0.20.136",
+    "@yearn-finance/web-lib": "2.0.0",
     "axios": "^1.4.0",
+    "csstype": "^3.0.10",
     "dayjs": "^1.11.8",
     "ethers": "5.7.2",
     "formidable": "^2.1.1",
@@ -30,10 +33,12 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "html2canvas": "^1.4.1",
+    "jest": "^29.0.0",
     "next": "^13.4.12",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.0.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
@@ -44,6 +49,7 @@
     "tailwindcss": "^3.3.2",
     "telegraf": "^4.12.2",
     "viem": "^1.5.3",
+    "vite": "^4.2.0",
     "wagmi": "^1.3.9",
     "wido": "^0.2.8",
     "zod": "^3.21.4"
@@ -54,8 +60,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
@@ -75,20 +80,10 @@
     "postcss-nesting": "^12.0.0",
     "sass": "^1.63.3",
     "sharp": "^0.32.1",
-    "vitest": "^0.32.2",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
+    "vitest": "^0.32.2",
     "webpack": "^5.88.2"
-  },
-  "resolutions": {
-    "bn.js": "5.2.1",
-    "babel-loader": "9.1.0",
-    "framer-motion": "7.6.15",
-    "ethereumjs-util": "6.1.0",
-    "schema-utils": "4.0.0",
-    "tr46": "1.0.1",
-    "d3-color": "^3.1.0",
-    "json5": ">=2.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
