--- a/public/apps/vaults-manifest.json
+++ b/public/apps/vaults-manifest.json
@@ -4,8 +4,8 @@
 	"description": "Let your assets work for you with the best risk-adjusted yields in DeFi.",
 	"iconPath": "./favicons/favicon.svg",
 	"locale": "en-US",
-	"uri": "https://yearn.finance/vaults/",
-	"og": "https://yearn.finance/apps/vaults-og.png",
+	"uri": "https://yearn.fi/vaults/",
+	"og": "https://yearn.fi/apps/vaults-og.png",
 	"twitter": "@iearnfinance",
 	"github": "https://github.com/Majorfi/y",
 	"icons": [
