--- a/public/apps/ybal-manifest.json
+++ b/public/apps/ybal-manifest.json
@@ -4,8 +4,8 @@
 	"description": "The best Balancer yields in defi. *mic drop*",
 	"iconPath": "./favicons/favicon.svg",
 	"locale": "en-US",
-	"uri": "https://yearn.finance/ybal/",
-	"og": "https://yearn.finance/apps/ybal-og.png",
+	"uri": "https://yearn.fi/ybal/",
+	"og": "https://yearn.fi/apps/ybal-og.png",
 	"twitter": "@iearnfinance",
 	"github": "https://github.com/Majorfi/y",
 	"icons": [
