--- a/public/apps/ybribe-manifest.json
+++ b/public/apps/ybribe-manifest.json
@@ -4,8 +4,8 @@
 	"description": "sell votes, or buy them. Just like democracy.",
 	"iconPath": "./favicons/favicon.svg",
 	"locale": "en-US",
-	"uri": "https://yearn.finance/ybribe",
-	"og": "https://yearn.finance/apps/ybribe-og.png",
+	"uri": "https://yearn.fi/ybribe",
+	"og": "https://yearn.fi/apps/ybribe-og.png",
 	"twitter": "@iearnfinance",
 	"github": "https://github.com/yearn/yearn.fi",
 	"icons": [
