fix: wallet connect

--- a/public/apps/vaults-manifest.json
+++ b/public/apps/vaults-manifest.json
@@ -7,7 +7,7 @@
 	"uri": "https://yearn.fi/vaults/",
 	"og": "https://yearn.fi/apps/vaults-og.png",
 	"twitter": "@iearnfinance",
-	"github": "https://github.com/Majorfi/y",
+	"github": "https://github.com/yearn/yearn.fi",
 	"icons": [
 		{
 			"src": "./favicons/android-icon-192x192.png",
