--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@headlessui/react": "^1.7.17",
     "@next/bundle-analyzer": "^13.4.19",
     "@popperjs/core": "^2.11.8",
+    "@rainbow-me/rainbowkit": "^1.0.10",
     "@react-hookz/deep-equal": "^1.0.4",
     "@sentry/nextjs": "^7.66.0",
     "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^1.3.10",
-    "@yearn-finance/web-lib": "^3.0.15",
+    "@yearn-finance/web-lib": "^3.0.19",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
     "ethers": "5.7.2",
