--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@cowprotocol/cow-sdk": "^2.1.0",
+    "@cowprotocol/cow-sdk": "2.1.0",
     "@headlessui/react": "^1.7.17",
     "@next/bundle-analyzer": "^13.4.19",
     "@popperjs/core": "^2.11.8",
@@ -25,6 +25,7 @@
     "@yearn-finance/web-lib": "^3.0.20",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "ethers": "5.7.2",
     "formidable": "^3.5.1",
     "framer-motion": "^10.16.2",
@@ -35,6 +36,7 @@
     "next-pwa": "^5.6.0",
     "next-seo": "^6.1.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
@@ -42,9 +44,9 @@
     "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.8.0",
     "swr": "^2.2.2",
-    "tailwindcss": "^3.3.3",
     "telegraf": "^4.13.1",
     "viem": "^1.9.5",
+    "vite": "^4.2.0",
     "wagmi": "^1.3.11",
     "wido": "^0.3.8",
     "zod": "^3.22.2"
@@ -52,7 +54,6 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.5.9",
-    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
@@ -75,21 +76,11 @@
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
     "sass": "^1.66.1",
-    "sharp": "^0.32.5",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "vitest": "^0.34.3",
     "webpack": "^5.88.2"
-  },
-  "resolutions": {
-    "bn.js": "5.2.1",
-    "babel-loader": "9.1.0",
-    "framer-motion": "7.6.15",
-    "ethereumjs-util": "6.1.0",
-    "schema-utils": "4.0.0",
-    "tr46": "1.0.1",
-    "d3-color": "^3.1.0",
-    "json5": ">=2.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
