chore: Pin "swr": "2.1.5"

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-popper": "^2.3.0",
     "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.8.0",
-    "swr": "^2.2.2",
+    "swr": "2.1.5",
     "telegraf": "^4.13.1",
     "viem": "^1.9.5",
     "vite": "^4.2.0",
