--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
   "dependencies": {
     "@cowprotocol/cow-sdk": "2.1.0",
     "@headlessui/react": "^1.7.17",
-    "@next/bundle-analyzer": "^13.4.19",
     "@popperjs/core": "^2.11.8",
     "@rainbow-me/rainbowkit": "^1.0.10",
-    "@react-hookz/deep-equal": "^1.0.4",
-    "@sentry/nextjs": "^7.66.0",
     "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^1.3.10",
     "@yearn-finance/web-lib": "^3.0.20",
@@ -62,6 +59,9 @@
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
+    "@sentry/nextjs": "^7.66.0",
+    "@next/bundle-analyzer": "^13.4.19",
+    "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-brackets": "^0.1.3",
@@ -70,7 +70,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint": "^8.48.0",
     "next-transpile-modules": "^10.0.1",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
@@ -81,6 +80,9 @@
     "typescript": "^5.2.2",
     "vitest": "^0.34.3",
     "webpack": "^5.88.2"
+  },
+  "resolutions": {
+    "json5": ">=2.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
