chore: Add YDAEMON_BASE_URI env var

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,4 @@ jobs:
         run: yarn build
         env:
           WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
+          YDAEMON_BASE_URI: ${{ secrets.YDAEMON_BASE_URI }}
