--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@headlessui/react": "^1.7.17",
     "@popperjs/core": "^2.11.8",
     "@rainbow-me/rainbowkit": "^1.0.10",
-    "@wagmi/chains": "^1.8.0",
-    "@wagmi/core": "^1.4.1",
+    "@wagmi/chains": "1.8.0",
+    "@wagmi/core": "1.4.1",
     "@yearn-finance/web-lib": "3.0.37",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
@@ -34,18 +34,18 @@
     "next-seo": "^6.1.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-paginate": "^8.2.0",
     "react-popper": "^2.3.0",
     "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.8.0",
     "swr": "2.1.5",
     "telegraf": "^4.13.1",
-    "viem": "^1.10.12",
-    "vite": "^4.2.0",
-    "wagmi": "^1.4.1",
-    "wido": "^0.4.1",
+    "viem": "1.10.9",
+    "vite": "4.2.0",
+    "wagmi": "1.4.1",
+    "wido": "0.4.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -53,8 +53,8 @@
     "@sentry/nextjs": "^7.66.0",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.5.9",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "@vitejs/plugin-react": "^4.0.4",
