--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@cowprotocol/cow-sdk": "2.1.0",
     "@headlessui/react": "^1.7.17",
     "@popperjs/core": "^2.11.8",
-    "@rainbow-me/rainbowkit": "^1.0.10",
+    "@rainbow-me/rainbowkit": "1.0.11",
     "@wagmi/chains": "1.8.0",
     "@wagmi/core": "1.4.1",
-    "@yearn-finance/web-lib": "3.0.37",
+    "@yearn-finance/web-lib": "3.0.38",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
     "eslint-plugin-react-hooks": "^4.6.0",
