--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "webpack": "^5.88.2"
   },
   "resolutions": {
-    "json5": ">=2.2.2"
+    "json5": ">=2.2.2",
+	"postcss": ">=8.4.31"
   },
   "engines": {
     "node": ">=18.0.0"
