--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
 		"prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
 		"bump": "bump",
+		"prepare": "husky install",
 		"test": "vitest run"
 	},
 	"dependencies": {
@@ -73,6 +74,7 @@
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"eslint-plugin-tailwindcss": "^3.13.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
+		"husky": "^8.0.3",
 		"lint-staged": "^14.0.1",
 		"next-transpile-modules": "^10.0.1",
 		"postcss": "^8.4.31",
