--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
 	"editor.wordWrap": "off",
 	"editor.autoIndent": "keep",
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": false
+		"source.fixAll": true
 	},
 	"editor.quickSuggestions": {
 		"strings": true
