--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	},
 	"devDependencies": {
 		"@next/bundle-analyzer": "^13.4.19",
+		"@next/eslint-plugin-next": "^13.5.4",
 		"@sentry/nextjs": "^7.66.0",
 		"@testing-library/react": "^14.0.0",
 		"@types/node": "^20.5.9",
