--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"ethers": "5.7.2",
 		"formidable": "^3.5.1",
-		"framer-motion": "^10.16.2",
-		"graphql": "^16.8.0",
+		"framer-motion": "^10.16.4",
+		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
 		"html2canvas": "^1.4.1",
-		"next": "^13.4.19",
+		"next": "^13.5.4",
 		"next-pwa": "^5.6.0",
 		"next-seo": "^6.1.0",
 		"nprogress": "^0.2.0",
-		"prop-types": "^15.6.0",
+		"prop-types": "^15.8.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-paginate": "^8.2.0",
@@ -47,28 +47,28 @@
 		"swr": "2.1.5",
 		"telegraf": "^4.13.1",
 		"viem": "1.10.9",
-		"vite": "4.4.9",
+		"vite": "^4.4.11",
 		"wagmi": "1.4.1",
 		"wido": "0.4.1",
-		"zod": "^3.22.2"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@next/bundle-analyzer": "^13.4.19",
+		"@next/bundle-analyzer": "^13.5.4",
 		"@next/eslint-plugin-next": "^13.5.4",
-		"@sentry/nextjs": "^7.66.0",
+		"@sentry/nextjs": "^7.73.0",
 		"@testing-library/react": "^14.0.0",
-		"@types/node": "^20.5.9",
-		"@types/react": "18.2.21",
-		"@types/react-dom": "18.2.7",
-		"@typescript-eslint/eslint-plugin": "^6.5.0",
-		"@typescript-eslint/parser": "^6.5.0",
-		"@vitejs/plugin-react": "4.0.4",
-		"autoprefixer": "^10.4.15",
+		"@types/node": "^20.8.2",
+		"@types/react": "^18.2.25",
+		"@types/react-dom": "^18.2.10",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"@vitejs/plugin-react": "^4.1.0",
+		"autoprefixer": "^10.4.16",
 		"babel-loader": "^9.1.3",
 		"bump": "^0.2.5",
-		"eslint": "^8.48.0",
-		"eslint-config-next": "^13.4.19",
-		"eslint-import-resolver-typescript": "^3.6.0",
+		"eslint": "^8.50.0",
+		"eslint-config-next": "^13.5.4",
+		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-brackets": "^0.1.3",
 		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-react": "^7.33.2",
@@ -82,13 +82,13 @@
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^12.0.1",
 		"prettier": "^3.0.3",
-		"sass": "^1.66.1",
+		"sass": "^1.68.0",
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard": "^34.0.0",
 		"tailwindcss": "^3.3.3",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.2.2",
-		"vitest": "^0.34.3",
+		"vitest": "^0.34.6",
 		"webpack": "^5.88.2"
 	},
 	"resolutions": {
