--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 		"@cowprotocol/cow-sdk": "2.1.0",
 		"@headlessui/react": "1.7.17",
 		"@popperjs/core": "^2.11.8",
-		"@rainbow-me/rainbowkit": "1.0.11",
+		"@rainbow-me/rainbowkit": "^1.1.1",
 		"@wagmi/chains": "1.8.0",
-		"@wagmi/core": "1.4.1",
-		"@yearn-finance/web-lib": "3.0.43",
+		"@wagmi/core": "^1.4.3",
+		"@yearn-finance/web-lib": "^3.0.49",
 		"axios": "^1.5.0",
 		"dayjs": "^1.11.9",
 		"eslint-config-prettier": "^9.0.0",
@@ -46,9 +46,9 @@
 		"recharts": "^2.8.0",
 		"swr": "2.1.5",
 		"telegraf": "^4.13.1",
-		"viem": "1.10.9",
+		"viem": "^1.16.2",
 		"vite": "^4.4.11",
-		"wagmi": "1.4.1",
+		"wagmi": "^1.4.3",
 		"wido": "0.4.1",
 		"zod": "^3.22.4"
 	},
