--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"tailwindcss": "^3.3.3",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.2.2",
+		"use-query-params": "^2.2.1",
 		"vitest": "^0.34.6",
 		"webpack": "^5.88.2"
 	},
