--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "^2.8.0",
     "swr": "2.1.5",
     "telegraf": "^4.13.1",
+    "use-query-params": "^2.2.1",
     "viem": "^1.16.5",
     "vite": "^4.2.0",
     "wagmi": "^1.4.3",
