--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@cowprotocol/cow-sdk": "2.1.0",
     "@headlessui/react": "^1.7.17",
     "@popperjs/core": "^2.11.8",
-    "@rainbow-me/rainbowkit": "^1.0.10",
+    "@rainbow-me/rainbowkit": "^1.1.2",
     "@wagmi/chains": "^1.8.0",
-    "@wagmi/core": "^1.4.1",
-    "@yearn-finance/web-lib": "3.0.37",
+    "@wagmi/core": "^1.4.3",
+    "@yearn-finance/web-lib": "^3.0.57",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -42,9 +42,10 @@
     "recharts": "^2.8.0",
     "swr": "2.1.5",
     "telegraf": "^4.13.1",
-    "viem": "^1.10.12",
+    "use-query-params": "^2.2.1",
+    "viem": "^1.16.5",
     "vite": "^4.2.0",
-    "wagmi": "^1.4.1",
+    "wagmi": "^1.4.3",
     "wido": "^0.4.1",
     "zod": "^3.22.2"
   },
