--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
 			"@vaults-v3/*": ["apps/vaults-v3/*"],
 			"@veYFI/*": ["apps/veyfi/*"],
 			"@yBribe/*": ["apps/ybribe/*"],
-			"@yCRV/*": ["apps/ycrv/*"],
-			"@yBal/*": ["apps/ybal/*"]
+			"@yCRV/*": ["apps/ycrv/*"]
 		},
 		/* Basic Options */
 		"target": "esnext",
