--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@headlessui/react": "1.7.17",
 		"@popperjs/core": "^2.11.8",
 		"@rainbow-me/rainbowkit": "^1.3.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@wagmi/core": "^1.4.7",
 		"@yearn-finance/web-lib": "^3.0.78",
 		"axios": "^1.6.2",
