--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@headlessui/react": "1.7.17",
 		"@popperjs/core": "^2.11.8",
 		"@rainbow-me/rainbowkit": "^1.3.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@wagmi/core": "^1.4.7",
 		"@yearn-finance/web-lib": "^3.0.78",
 		"axios": "^1.6.2",
@@ -33,12 +34,12 @@
 		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
 		"html2canvas": "^1.4.1",
-		"next": "^14.0.3",
+		"next": "^13.5.4",
 		"next-pwa": "^5.6.0",
 		"next-seo": "^6.4.0",
 		"nprogress": "^0.2.0",
 		"prop-types": "^15.8.1",
-		"react": "18.2.0",
+		"react": "^18.2.0",
 		"react-dom": "18.2.0",
 		"react-paginate": "^8.2.0",
 		"react-popper": "^2.3.0",
