--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,22 +5,20 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "10:00"
-    ignore:
-      - dependency-name: "@types/*" #Ignore updates for all `@types/` packages
-      - dependency-name: "eslint*" #Ignore updates for all `eslint` packages
-      - dependency-name: "ts-loader" #Ignore updates for ts-loader
-      - dependency-name: "dotenv-webpack" #Ignore updates for dotenv-webpack
-      - dependency-name: "@typescript*" #Ignore updates for all `@typescript` packages
-      - dependency-name: "postcss*" #Ignore updates for all `postcss` packages
-      - dependency-name: "sharp" #Ignore updates for sharp
-      - dependency-name: "sass" #Ignore updates for sass
-      - dependency-name: "typescript" #Ignore patch for typescript
-        update-types: ["version-update:semver-patch"]
-
-      
+    - package-ecosystem: 'npm' # See documentation for possible values
+      directory: '/' # Location of package manifests
+      schedule:
+          interval: 'monthly'
+          day: 'monday'
+          time: '10:00'
+      ignore:
+          - dependency-name: '@types/*' #Ignore updates for all `@types/` packages
+          - dependency-name: 'eslint*' #Ignore updates for all `eslint` packages
+          - dependency-name: 'ts-loader' #Ignore updates for ts-loader
+          - dependency-name: 'dotenv-webpack' #Ignore updates for dotenv-webpack
+          - dependency-name: '@typescript*' #Ignore updates for all `@typescript` packages
+          - dependency-name: 'postcss*' #Ignore updates for all `postcss` packages
+          - dependency-name: 'sharp' #Ignore updates for sharp
+          - dependency-name: 'sass' #Ignore updates for sass
+          - dependency-name: 'typescript' #Ignore patch for typescript
+            update-types: ['version-update:semver-patch']
