--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "viem": "^2.13.10",
     "vite": "^5.2.13",
     "wagmi": "^2.10.2",
+    "xxhashjs": "^0.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
