--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,13 @@ public/sw*
 public/workbox*
 ipfs/*
 public/worker*
+dist
+node_modules
+postcss.config.js
+__tests__
+.eslintrc.cjs
+jest.config.cjs
+postcss.config.cjs
+tailwind.config.cjs
+tailwind.plugin.cjs
+tailwind.theme.cjs
