feat: setup import from nextgen

--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -50,7 +50,8 @@
 		"viem": "2.30.5",
 		"wagmi": "^2.10.10",
 		"xxhashjs": "^0.2.2",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"@yearnfi/nextgen": "workspace:*"
 	},
 	"devDependencies": {
 		"@next/bundle-analyzer": "^14.2.4",
