--- a/packages/legacy/tsconfig.json
+++ b/packages/legacy/tsconfig.json
@@ -6,7 +6,8 @@
 			"@lib/*": ["apps/lib/*"],
 			"@vaults/*": ["apps/vaults/*"],
 			"@vaults-v2/*": ["apps/vaults-v2/*"],
-			"@vaults-v3/*": ["apps/vaults-v3/*"]
+			"@vaults-v3/*": ["apps/vaults-v3/*"],
+			"@nextgen/components": ["../nextgen/src/components/elements/index.ts"]
 		},
 		/* Basic Options */
 		"target": "ESNext",
