--- a/packages/legacy/tsconfig.json
+++ b/packages/legacy/tsconfig.json
@@ -38,7 +38,7 @@
 		"noEmit": true,
 		"incremental": true,
 		"isolatedModules": true,
-		"plugins": [{"name": "next"}]
+		"plugins": [{ "name": "next" }]
 	},
 	"exclude": ["node_modules", "_app"],
 	"include": [
@@ -51,12 +51,9 @@
 		"tailwind.config.js",
 		"next.config.js",
 		"theme.config.js",
-		".eslintrc.js",
 		".next/types/**/*.ts",
-		"./apps/lib/.eslintrc.cjs",
 		"jest.config.js",
 		"vitest.config.ts",
-		"worker/index.js",
-		"stylelint.config.js"
+		"worker/index.js"
 	]
 }
