--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -8,9 +8,8 @@
 		"start": "tsc && next build && next start",
 		"build": "tsc && next build",
 		"export": "tsc && next build && next export -o ipfs",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-		"prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
-		"prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
+		"lint": "biome check .",
+		"lint:fix": "biome check --write .",
 		"tslint": "tsc -p tsconfig.json --noEmit",
 		"bump": "bump",
 		"test": "vitest run"
@@ -54,40 +53,23 @@
 		"@yearnfi/nextgen": "workspace:*"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.1.3",
 		"@next/bundle-analyzer": "^14.2.4",
-		"@next/eslint-plugin-next": "^14.2.4",
 		"@testing-library/react": "^16.0.0",
 		"@types/minimatch": "^6.0.0",
 		"@types/node": "^20.14.2",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
-		"@typescript-eslint/eslint-plugin": "^7.13.0",
-		"@typescript-eslint/parser": "^7.13.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"autoprefixer": "^10.4.19",
 		"babel-loader": "^9.1.3",
 		"bump": "^0.2.5",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.2.4",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-brackets": "^0.1.3",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-react": "^7.34.2",
-		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-simple-import-sort": "^12.1.0",
-		"eslint-plugin-tailwindcss": "^3.17.3",
-		"eslint-plugin-unused-imports": "^4.0.0",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.7",
 		"next-transpile-modules": "^10.0.1",
 		"postcss": "^8.4.38",
 		"postcss-import": "^16.1.0",
 		"postcss-nesting": "^12.1.5",
-		"prettier": "^3.3.2",
-		"sass": "^1.77.5",
-		"stylelint": "^16.6.1",
-		"stylelint-config-standard": "^36.0.0",
 		"tailwindcss": "^3.4.4",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.5.3",
